# menuconfig

./: .gitignore  .gitpicker.json  CMakeLists.txt  Kconfig  README.md  api.c  argparse.hpp  array_size.h  conf.c  confdata.c  expr.c  expr.h  gh.json  hash.h  hashtable.h  install_deps.sh  internal.h  lexer.l  list.h  list_types.h  lkc.h  lkc_proto.h  main.c  main.cpp  mconf.c  menu.c  mnconf-common.c  mnconf-common.h  parser.y  preprocess.c  preprocess.h  symbol.c  sync.py  util.c  xalloc.h
.github/workflows/: build.yml
lxdialog/: checklist.c  dialog.h  inputbox.c  menubox.c  textbox.c  util.c  yesno.c
